--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".LoginActivity"
-    android:padding="10dp">
+    tools:context=".SignUpActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -33,19 +32,38 @@
         android:hint="비밀번호 입력"
         android:inputType="textPassword" />
 
-    <Button
-        android:id="@+id/loginBtn"
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="이름" />
+
+    <EditText
+        android:id="@+id/userNameEdt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="로그인" />
+        android:hint="이름 입력"
+        android:inputType="textPassword" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="폰번" />
+
+    <EditText
+        android:id="@+id/userPhoneEdt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="폰번 입력"
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/signUpBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="회원 가입" />
-
-
+        android:text="회원가입" />
 
 
 </LinearLayout>
